# clashtui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FeaturesToBeAdded.md  Ideas.md  LICENSE  Makefile.toml  PKGBUILD  README.md  README_EN.md  README_ZH.md  TIPS.md  build.rs  install  install.ps1
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml
.github/workflows/: CI.yml  build.yml  build_release.yml  install_test.yml  install_testing.yml  pr.yml  real_install_test.yml  release.yml  rust-clippy.yml  rust.yml
App/: basic_clash_config.yaml  config.toml
App/templates/: generic_tpl.yaml  generic_tpl_with_all.yaml  generic_tpl_with_filter.yaml
Assets/: clashtui_demo.tape
Doc/: README.md  README_ZH.md  clashtui_usage.md  clashtui_usage_zh.md  install_clashtui_manually.md  install_clashtui_manually_zh.md  save_profile_to_git_repo.md
Doc/Example/: config.yaml
Doc/clash_test/: config.yaml
Doc/my/: basic_clash_config.yaml
Doc/systemd/: README.md  clashtui.service  clashtui.timer
Doc/win/: clashtui_usage.md  clashtui_usage_zh.md  install_clashtui_manually.md  install_clashtui_manually_zh.md
Example/: basic_clash_config.yaml  config.toml  config.yaml
Example/profiles/: profile1.yaml
Example/templates/: generic_tpl.yaml  generic_tpl_with_all.yaml  generic_tpl_with_filter.yaml  generic_tpl_with_ruleset.yaml
InstallRes/: basic_clash_config.yaml
InstallRes/templates/: generic_tpl.yaml
PkgManagers/: PKGBUILD
PkgManagers/Scoop/: clashtui.json
api/: Cargo.toml
api/src/: clash.rs  lib.rs
app/: Cargo.toml
app/src/: app.rs  main.rs
app/src/tui/: mod.rs  statusbar.rs  tabbar.rs
app/src/tui/tabs/: clashsrvctl.rs  config.rs  mod.rs  profile.rs  profile_input.rs
app/src/tui/util/: list.rs  mod.rs
app/src/tui/utils/: list.rs  mod.rs
app/src/ui/: statusbar.rs  tabbar.rs
app/src/ui/tabs/: clashsrvctl.rs  profile.rs
app/src/ui/utils/: theme.rs
app/src/ui/widgets/: confirm_popup.rs  input.rs  list.rs
app/src/utils/: flags.rs  mod.rs  tui.rs  tui_impl.rs
app/src/utils/lib/: clash.rs  mod.rs
app/src/utils/tui/: config.rs  mod.rs
assets/: clashtui_demo.tape  demo.cast  demo.tape
clashctl/: Cargo.toml
clashctl/api/src/: clash.rs  github_restful_api.rs
clashctl/backend/: Cargo.toml
clashctl/backend/src/: lib.rs
clashctl/backend/src/utils/: backend.rs  config.rs  mod.rs  utils.rs
clashctl/backend/src/utils/backend/: impl_app.rs  impl_net.rs  impl_profile.rs
clashctl/src/: commands.rs  lib.rs  main.rs  utils.rs
clashctl/src/tui/: app.rs  statusbar.rs  symbols.rs
clashctl/src/tui/tabs/: clashsrvctl.rs  profile.rs
clashctl/src/tui/utils/: list_popup.rs
clashctl/src/utils/: backend.rs  config.rs  mod.rs  state.rs
clashctl/src/utils/backend/: impl_app.rs  impl_profile.rs
clashctl/ui/: Cargo.toml
clashctl/ui/src/: lib.rs
clashctl/ui/src/utils/: mod.rs
clashctl/ui/src/widgets/: msg.rs
clashtui/: Cargo.toml  build.rs
clashtui/api/: Cargo.toml
clashtui/api/src/: clash.rs  config.rs  connections.rs  dl_mihomo.rs  geo.rs  github_restful_api.rs  lib.rs
clashtui/backend/: Cargo.toml
clashtui/backend/src/: backend.rs  consts.rs  lib.rs
clashtui/backend/src/backend/: impl_clashsrv.rs  impl_conn.rs  impl_net.rs  impl_profile.rs
clashtui/backend/src/utils/: backend.rs  config.rs  ipc_linux.rs  ipc_windows.rs  mod.rs  state.rs  utils.rs
clashtui/backend/src/utils/backend/: impl_app.rs  impl_clashsrv.rs  impl_net.rs  impl_profile.rs
clashtui/src/: app.rs  commands.rs  main.rs  utils.rs
clashtui/src/tui/: app.rs  impl_app.rs  mod.rs  statusbar.rs  symbols.rs  tabbar.rs
clashtui/src/tui/tabs/: clashsrvctl.rs  config.rs  connctl.rs  mod.rs  profile.rs  profile_input.rs
clashtui/src/tui/utils/: help_popup.rs  info_popup.rs  key_list.rs  list.rs  list_popup.rs  mod.rs
clashtui/src/utils/: backend.rs  clashtui_data.rs  config.rs  consts.rs  flags.rs  impl_app.rs  impl_clashsrv.rs  impl_profile.rs  ipc.rs  mod.rs  state.rs  tui.rs  tui_impl.rs  utils.rs
clashtui/src/utils/backend/: impl_app.rs  impl_clashsrv.rs  impl_profile.rs
clashtui/src/utils/tui/: impl_app.rs  impl_clashsrv.rs  impl_profile.rs
clashtui/ui/: Cargo.toml
clashtui/ui-derive/: Cargo.toml
clashtui/ui/src/: lib.rs
clashtui/ui/src/utils/: error.rs  mod.rs  theme.rs
clashtui/ui/src/widgets/: confirm_popup.rs  input.rs  list.rs  mod.rs  msg.rs  tmp.rs
contrib/default_configs/: config.yaml  default_keymap.yaml  default_theme.yaml  keymap.yaml
contrib/themes/: Dracula.yaml
docs/: architecture_en.md  architecture_zh.md  clashtui_feature_design.md  clashtui_feature_design_en.md  clashtui_feature_design_zh.md  design.md  dev.md  development_conventions.md  get_started.md  getting_started_en.md  getting_started_zh.md  install_manually_en.md  install_manually_zh.md  key_unification.md  log_panel.md  migrating_steps.md  modifier_keys.md  profile_management.md  profile_template.md  proxies_selection.md  update_profile.md  which_panel.md
docs/support_singbox/: clashtui_filetree.md  singbox_support.md
installs/: install  install.ps1
installs/tests/: install.bats  install.tests.ps1  test_helper.bash  verify_install.py
singbox_sample_data/: singbox_config.json
singbox_sample_data/api_data/: configs.json  connections.json  proxies.json  version.json
src/: app.rs  backend.rs  clashtui_state.rs  cli.rs  commands.rs  config.rs  error.rs  functions.rs  lib.rs  main.rs  profile.rs  tui.rs  utils.rs  webapi.rs
src/backend/: backend.rs  impl_profile.rs  impl_service.rs  impl_template.rs  impl_tui.rs  impl_webapi.rs  ipc.rs  mod.rs  state.rs  util.rs
src/clash/: backend.rs  mod.rs  net_file.rs  profile.rs  util.rs  webapi.rs
src/cli/: complete.rs  handler.rs  utils.rs  widgets.rs
src/commands/: complete.rs  handler.rs  interactive.rs
src/config/: core.rs  database.rs  util.rs  v0_2_3.rs  v0_3_0.rs
src/functions/: command.rs  file.rs  restful.rs
src/keys/: key_list.rs  mod.rs
src/profile/: map.rs
src/tui/: agent.rs  app.rs  frontend.rs  (+10 more)
test_conf/: config.yaml
ui/: Cargo.toml
(+433 files in other folders)
