[package]
name = "clashtui"
version = "0.3.0"
edition = "2021"

authors = ["Johan Chane <johanchanex at gmail dot com>"]
description = "Mihomo TUI Client"
license = "MIT"
repository = "https://github.com/JohanChane/clashtui"
homepage = "https://github.com/JohanChane/clashtui"
documentation = "https://github.com/JohanChane/clashtui"
readme = "README.md"

exclude = [".github", ".gitignore", "PkgManagers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [badges]
# maintenance = { status = "passively-maintained" }

[features]
tui = [
  "dep:ratatui",
  "dep:crossterm",
  "dep:tokio",
  "dep:futures-lite",
  "dep:derive_more",
  "dep:strum",
]
customized-theme = ["tui", "ratatui/serde"]
template = []
connection-tab = ["tui", "ratatui/unstable-widget-ref"]
migration_v0_2_3 = []
default = ["tui", "connection-tab", "template", "migration_v0_2_3"]


[dependencies]
log = "0.4.22"
env_logger = { version = "0.11.7", default-features = false, features = [
  "humantime",
] }
is-root = "0.1.4"
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.26"
self-replace = { version = "1.5.0", default-features = false }
anyhow = "1.0.86"
thiserror = "2"
serde = { version = "1.0.210", features = ["derive"] }
minreq = { version = "2.12.0", features = [
  "proxy",
  "https",
  "json-using-serde",
] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
url = { version = "^2" }
base64 = { version = "^0" }
futures-lite = { version = "2.6.0", default-features = false, optional = true }
strum = { version = "0.26.3", features = ["derive"], optional = true }

[dependencies.derive_more]
version = "2"
optional = true
default-features = false
features = ["debug"]

[dependencies.tokio]
version = "1.40.0"
features = ["rt", "macros", "sync", "time"]
optional = true

[dependencies.crossterm]
version = "0.28.1"
default-features = false
features = ["events", "event-stream"]
optional = true

[dependencies.ratatui]
version = "0.29.0"
default-features = false
features = ["crossterm"]
optional = true


[target.'cfg(windows)'.dependencies]
encoding_rs = "0.8.34"

[patch.crates-io]
is-root = { git = "https://github.com/Jackhr-arch/is-root" }

[profile.release]
lto = "fat"
opt-level = 's'
strip = true


[package.metadata.deb]
maintainer = 'Jackhr-arch <63526062+Jackhr-arch@users.noreply.github.com>'
extended-description = """
A tool for mihomo
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  [
    'target/release/clashtui',
    'usr/bin/clashtui',
    '755',
  ],
  [
    'README.md',
    'usr/share/doc/clashtui/README.md',
    '644',
  ],
]
maintainer-scripts = 'debian/'
