[package]
name = "demotui"
# 发布相关的通用配置
version = "0.1.0"
edition = "2024"
description = "A demo TUI application"
license = "MIT OR Apache-2.0"
keywords = ["tui", "demo", "terminal"]
categories = ["command-line-utilities", "terminal"]
readme = "README.md"
homepage = "https://github.com/yourusername/demotui"
repository = "https://github.com/yourusername/demotui"

[package.metadata.release]
# 发布时是否执行 cargo test
pre-release-commands = ["cargo test"]
# 发布后是否执行 cargo publish
publish = true

[dependencies]
log = "0.4.22"
env_logger = { version = "0.11.7", default-features = false, features = [
    "humantime",
] }
anyhow = "1.0.86"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
indexmap = { version = "2", features = ["serde"] }
minreq = { version = "2.12.0", features = [
    "proxy",
    "https",
    "json-using-serde",
] }
strum = { version = "0.26.3", features = ["derive"] }
fastrand = "2.3.0"
base64 = { version = "^0", optional = true }
url-parse = { version = "1", optional = true }

# CLI
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.26"
# is-root = "0.1.4"
# self-replace = { version = "1.5.0", default-features = false }

# TUI
tokio = { version = "1.48.0", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
], optional = true }
crossterm = { version = "*", features = [
    "event-stream",
    "serde",
], default-features = false, optional = true }
ratatui = { version = "0.29.0", features = [
    "crossterm",
], default-features = false, optional = true }
futures-lite = { version = "2.6.0", default-features = false, optional = true }
signal-hook-tokio = { version = "0", features = ["futures-v0_3"], optional = true }
nix = { version = "0", features = ["user", "fs"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
customized-theme = ["tui", "ratatui/serde"]
migration_v0_2_3 = []
tui = ["dep:ratatui", "dep:crossterm", "dep:tokio", "dep:futures-lite", "dep:signal-hook-tokio"]

deprecated = ["dep:url-parse", "dep:base64"]

default = ["customized-theme"]


# 工作空间的 release 配置
[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
incremental = false
opt-level = "z"     # 优化大小，也可以用 "s" 或 "3"
