[package]
name = "clashtui"
version = "0.1.4"
edition = "2021"

authors = ["Johan Chane <johanchanex@gmail.com>"]
description = "Mihomo TUI Client"
license = "MIT"
repository = "https://github.com/JohanChane/clashtui"
homepage = "https://github.com/JohanChane/clashtui"
documentation = "https://github.com/JohanChane/clashtui"
readme = "README.md"

exclude = [
  "PKGBUILD",
  "Scoop/*",
  "Example/*",
  ".github/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.26.1", features = ["serde"] }
crossterm = { version = "0.27" }
serde = { version = "1.0", features = ["derive"] }
argh = { version = "0.1" }
reqwest = { version = "0.11", features = ["blocking"] } 
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
log4rs = "1.2"

[target.'cfg(target_os = "windows")'.dependencies]
encoding = "0.2.33"
