[package]
name = "clashctl"
version = "0.2.4"
edition = "2021"

authors = ["Johan Chane <johanchanex@gmail.com>"]
description = "Mihomo Control Client"
license = "MIT"
repository = "https://github.com/JohanChane/clashtui"
homepage = "https://github.com/JohanChane/clashtui"
documentation = "https://github.com/JohanChane/clashtui"
readme = "README.md"

exclude = ["PKGBUILD", "Scoop/*", "Example/*", ".github/*"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
tui = ["ui", "ratatui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui = { path = "ui", optional = true }
backend = { path = "backend" }
ratatui = { version = "*", default-features = false, features = [
  "crossterm",
], optional = true }
log = "0.4"
log4rs = { version = "1.3", default-features = false, features = [
  "pattern_encoder",
  "file_appender",
] }
enumflags2 = "0.7.9"
clap = { version = "4.5.4", features = [
  "std",
  "derive",
  "help",
  "usage",
  "suggestions",
  "color",
], default-features = false }
clap_complete = "4.5.2"


[target.'cfg(target_os = "windows")'.dependencies]
encoding = "0.2.33"

[workspace]
resolver = '2'
members = ["api", "backend", "ui", "ui-derive"]

[profile.release]
lto = "fat"
opt-level = 'z'
strip = true

[package.metadata.deb]
maintainer = 'Jackhr-arch <63526062+Jackhr-arch@users.noreply.github.com>'
extended-description = """
A tui tool for mihomo
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  [
    'target/release/clashctl',
    'usr/bin/clashctl',
    '755',
  ],
  [
    '../README.md',
    'usr/share/doc/clashctl/README.md',
    '644',
  ],
]
maintainer-scripts = 'debian/'
