[package]
name = "clashtui"
version = "0.2.3"
edition = "2021"

authors = ["Johan Chane <johanchanex@gmail.com>"]
description = "Mihomo TUI Client"
license = "MIT"
repository = "https://github.com/JohanChane/clashtui"
homepage = "https://github.com/JohanChane/clashtui"
documentation = "https://github.com/JohanChane/clashtui"
readme = "README.md"

exclude = ["PKGBUILD", "Scoop/*", "Example/*", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui = { path = "ui" }
api = { path = "api" }
ratatui = "*"
crossterm = "*"
serde = "*"
argh = "0.1"
serde_yaml = "0.9"
serde_json = "*"
log = "0.4"
log4rs = "1.3"

[target.'cfg(target_os = "windows")'.dependencies]
encoding = "0.2.33"

[workspace]
resolver = '2'
members = ["api", "ui", "ui-derive"]
