[package]
name = "clashtui"
version = "0.2.0"
edition = "2021"

authors = ["Johan Chane <johanchanex at gmail dot com>"]
description = "Mihomo TUI Client"
license = "MIT"
repository = "https://github.com/JohanChane/clashtui"
homepage = "https://github.com/JohanChane/clashtui"
documentation = "https://github.com/JohanChane/clashtui"
readme = "README.md"

include = ["clashtui/*", "LICENSE", "README.md", "README_ZH.md"]

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui = { path = "ui" }
api = { path = "api" }
ratatui = {version = "*", default-features = false, features = ["crossterm"]}
serde = {version = "*", default-features = false}
argh = "0.1"
serde_yaml = "0.9"
serde_json = "1.0"
log = "0.4"
log4rs = {version = "1.3", default-features = false, features = ["pattern_encoder", "file_appender"]}
enumflags2 = "0.7.9"
regex = {version = "1.10.3", default-features = false, features = ["std", "unicode-perl"]}
encoding = "0.2.33"
chrono = "0.4.35"

[workspace]
resolver = '2'
members = ["api", "ui", "ui-derive"]

[profile.release]
lto = "fat"
opt-level = 'z'
strip = true

[package.metadata.deb]
maintainer = 'Jackhr-arch <63526062+Jackhr-arch@users.noreply.github.com>'
extended-description = """
A tui tool for mihomo
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ['target/release/clashtui', 'usr/bin/clashtui', '755'],
  ['../README.md', 'usr/share/doc/clashtui/README.md', '644'],
]
maintainer-scripts = 'debian/'
