[package]
name = "clashtui"
version = "0.1.0-dev"
edition = "2021"

authors = ["Johan Chane <johanchanex at gmail dot com>"]
description = "Mihomo TUI Client"
license = "MIT"
repository = "https://github.com/JohanChane/clashtui"
homepage = "https://github.com/JohanChane/clashtui"
documentation = "https://github.com/JohanChane/clashtui"
readme = "README.md"

include = ["clashtui/*", "LICENSE", "README.md", "README_ZH.md"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
tui = ["ui", "ratatui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui = { path = "ui", optional = true }
backend = { path = "backend" }
ratatui = { version = "*", default-features = false, features = [
  "crossterm",
], optional = true }
log = "0.4"
log4rs = { version = "1.3", default-features = false, features = [
  "pattern_encoder",
  "file_appender",
] }
enumflags2 = "0.7.9"
clap = { version = "4.5.4", features = [
  "std",
  "derive",
  "help",
  "usage",
  "suggestions",
  "color",
], default-features = false }
clap_complete = "4.5.2"
anyhow = "1.0.86"


[workspace]
resolver = '2'
members = ["api", "backend", "ui", "ui-derive"]

[profile.release]
lto = "fat"
opt-level = 'z'
strip = true

[package.metadata.deb]
maintainer = 'Jackhr-arch <63526062+Jackhr-arch@users.noreply.github.com>'
extended-description = """
A tool for mihomo
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  [
    'target/release/clashtui',
    'usr/bin/clashtui',
    '755',
  ],
  [
    '../README.md',
    'usr/share/doc/clashtui/README.md',
    '644',
  ],
]
maintainer-scripts = 'debian/'
