[package]
name = "api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
minreq = { version = "2.11", features = ["proxy", "https"] }
serde_json = "1.0"
serde-this-or-that = { version = "0.4.2", optional = true }
chrono = "0.4.37"

[features]
deprecated = ["github_api"]
github_api = ["serde-this-or-that"]
