[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
serde = { version = "*", default-features = false }
serde_yaml = "0.9"
enumflags2 = "0.7.9"
log = "*"

[target.'cfg(target_os = "windows")'.dependencies]
encoding = "0.2.33"