[package]
name = "ui"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui-derive = { path = "../ui-derive" }

[dependencies.crossterm]
version = "^0.27"
default-features = false
features = ["events"]

[dependencies.ratatui]
version = "^0.27"
default-features = false
features = ["serde"]

[target.'cfg(windows)'.dependencies]
crossterm = { version = "^0.27", default-features = false, features = [
    "windows",
] }
